--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
 
                 <!-- Product Card 1 -->
-                <div class="bg-white rounded-lg shadow-md overflow-hidden" cursor-pointer"
+                <div class="bg-gray-500 rounded-lg shadow-md overflow-hidden" cursor-pointer"
                     onclick="previewImage('images/390-usd.jpg')">
                     <img src="images/390-usd.jpg" alt="390-usd" class="w-full h-32 object-cover">
                     <div class="p-4">
-                        <h3 class="text-lg font-semibold">TV Kodak de 40"</h3>
-                        <p class="text-gray-700">$390.00</p>
+                        <h3 class="text-white font-semibold">TV Kodak de 40"</h3>
+                        <p class="text-black-700">$390.00</p>
                         <div class="flex justify-between items-center mt-4">
                             <a rel="noopener"
                                 href="https://api.whatsapp.com/send?phone=+5353739500&text=Hola,%20me%20interesa%20la%20TV%20Kodak%20de%2040%22"
