--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
 
                 <!-- Product Card 1 -->
-                <div class="bg-gray-500 rounded-lg shadow-md overflow-hidden" cursor-pointer"
+                <div class="bg-gray-500 rounded-lg shadow-md overflow-hidden w-48 cursor-pointer card"
                     onclick="previewImage('images/390-usd.jpg')">
                     <img src="images/390-usd.jpg" alt="390-usd" class="w-full h-32 object-cover">
-                    <div class="p-4">
-                        <h3 class="text-white font-semibold">TV Kodak de 40"</h3>
-                        <p class="text-black-700">$390.00</p>
-                        <div class="flex justify-between items-center mt-4">
+                    <div class="p-2">
+                        <h3 class="text-white font-semibold text-sm">TV Kodak de 40"</h3>
+                        <p class="text-black-700 text-sm">$390.00</p>
+                        <div class="flex justify-between items-center mt-2">
                             <a rel="noopener"
                                 href="https://api.whatsapp.com/send?phone=+5353739500&text=Hola,%20me%20interesa%20la%20TV%20Kodak%20de%2040%22"
-                                class="bg-green-500 text-white py-2 px-4 rounded hover:bg-green-600 transition duration-300 ease-in-out"
+                                class="bg-green-500 text-white py-1 px-2 rounded hover:bg-green-600 transition duration-300 ease-in-out"
                                 target="_blank">
                                 WhatsApp
                             </a>
@@ -112,61 +112,93 @@
                 </div>
 
                 <!-- Product Card 2 -->
-                <div class="bg-white rounded-lg shadow-md overflow-hidden" cursor-pointer"
+                <div class="bg-gray-500 rounded-lg shadow-md overflow-hidden w-48 cursor-pointer card"
                     onclick="previewImage('images/420-usd.jpg')">
                     <img src="images/420-usd.jpg" alt="420-usd" class="w-full h-32 object-cover">
-                    <div class="p-4">
-                        <h3 class="text-lg font-semibold">TV Challenger de 43"</h3>
-                        <p class="text-gray-700">$420.00</p>
-                        <button class="mt-2 bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700">WhatsApp
-                        </button>
+                    <div class="p-2">
+                        <h3 class="text-white font-semibold text-sm">TV Challenger de 43"</h3>
+                        <p class="text-black-700 text-sm">$420.00</p>
+                        <div class="flex justify-between items-center mt-2">
+                            <a rel="noopener"
+                                href="https://api.whatsapp.com/send?phone=+5353739500&text=Hola,%20me%20interesa%20la%20TV%20Samsung%20de%2050%22"
+                                class="bg-green-500 text-white py-1 px-2 rounded hover:bg-green-600 transition duration-300 ease-in-out"
+                                target="_blank">
+                                WhatsApp
+                            </a>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Product Card 3 -->
-                <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                <div class="bg-gray-500 rounded-lg shadow-md overflow-hidden w-48 cursor-pointer card"
+                    onclick="previewImage('images/460-usd.jpg')">
                     <img src="images/460-usd.jpg" alt="460-usd" class="w-full h-32 object-cover">
-                    <div class="p-4">
-                        <h3 class="text-lg font-semibold">TV Kodak de 43"</h3>
-                        <p class="text-gray-700">$460.00</p>
-                        <button class="mt-2 bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700">WhatsApp
-                        </button>
+                    <div class="p-2">
+                        <h3 class="text-white font-semibold text-sm">TV Kodak de 43"</h3>
+                        <p class="text-black-700 text-sm">$460.00</p>
+                        <div class="flex justify-between items-center mt-2">
+                            <a rel="noopener"
+                                href="https://api.whatsapp.com/send?phone=+5353739500&text=Hola,%20me%20interesa%20la%20TV%20LG%20de%2055%22"
+                                class="bg-green-500 text-white py-1 px-2 rounded hover:bg-green-600 transition duration-300 ease-in-out"
+                                target="_blank">
+                                WhatsApp
+                            </a>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Product Card 4 -->
-                <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                    <img src="images/Microondas-20-L-160-usd.jpg" alt="Microondas-20-L-160-usd"
-                        class="w-full h-32 object-cover">
-                    <div class="p-4">
-                        <h3 class="text-lg font-semibold">Microondas 20L</h3>
-                        <p class="text-gray-700">$160.00</p>
-                        <button class="mt-2 bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700">WhatsApp
-                        </button>
+                <div class="bg-gray-500 rounded-lg shadow-md overflow-hidden w-48 cursor-pointer card"
+                    onclick="previewImage('images/Microondas-20-L-160-usd.jpg')">
+                    <img src="images/Microondas-20-L-160-usd.jpg" alt="500-usd" class="w-full h-32 object-cover">
+                    <div class="p-2">
+                        <h3 class="text-white font-semibold text-sm">Microondas de 20L"</h3>
+                        <p class="text-black-700 text-sm">$160.00</p>
+                        <div class="flex justify-between items-center mt-2">
+                            <a rel="noopener"
+                                href="https://api.whatsapp.com/send?phone=+5353739500&text=Hola,%20me%20interesa%20la%20TV%20Sony%20de%2065%22"
+                                class="bg-green-500 text-white py-1 px-2 rounded hover:bg-green-600 transition duration-300 ease-in-out"
+                                target="_blank">
+                                WhatsApp
+                            </a>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Product Card 5 -->
-                <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                    <img src="images/Royal-7-kilos-310-usd.jpg" alt="Royal-7-kilos-310-usd"
+                <div class="bg-gray-500 rounded-lg shadow-md overflow-hidden w-48 cursor-pointer card"
+                    onclick="previewImage('images/Milexus-3.5-pies-3-meses-garantía-330-usd.jpg')">
+                    <img src="images/Milexus-3.5-pies-3-meses-garantía-330-usd.jpg" alt="330-usd"
                         class="w-full h-32 object-cover">
-                    <div class="p-4">
-                        <h3 class="text-lg font-semibold">Royal 7 kilos</h3>
-                        <p class="text-gray-700">$310.00</p>
-                        <button class="mt-2 bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700">WhatsApp
-                        </button>
+                    <div class="p-2">
+                        <h3 class="text-white font-semibold text-sm">Milexus 3.5 Pies</h3>
+                        <p class="text-black-700 text-sm">$310.00</p>
+                        <div class="flex justify-between items-center mt-2">
+                            <a rel="noopener"
+                                href="https://api.whatsapp.com/send?phone=+5353739500&text=Hola,%20me%20interesa%20la%20TV%20Panasonic%20de%2070%22"
+                                class="bg-green-500 text-white py-1 px-2 rounded hover:bg-green-600 transition duration-300 ease-in-out"
+                                target="_blank">
+                                WhatsApp
+                            </a>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Product Card 6 -->
-                <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                    <img src="images/Milexus-3.5-pies-3-meses-garantía-330-usd.jpg"
-                        alt="Milexus-3.5-pies-3-meses-garantía-330-usd" class="w-full h-32 object-cover">
-                    <div class="p-4">
-                        <h3 class="text-lg font-semibold">Milexus de 3.5 pies</h3>
-                        <p class="text-gray-700">$330.00</p>
-                        <button class="mt-2 bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700">WhatsApp
-                        </button>
+                <div class="bg-gray-500 rounded-lg shadow-md overflow-hidden w-48 cursor-pointer card"
+                    onclick="previewImage('images/Royal-7-kilos-310-usd.jpg')">
+                    <img src="images/Royal-7-kilos-310-usd.jpg" alt="600-usd" class="w-full h-32 object-cover">
+                    <div class="p-2">
+                        <h3 class="text-white font-semibold text-sm">Royal de 7 Kg"</h3>
+                        <p class="text-black-700 text-sm">$600.00</p>
+                        <div class="flex justify-between items-center mt-2">
+                            <a rel="noopener"
+                                href="https://api.whatsapp.com/send?phone=+5353739500&text=Hola,%20me%20interesa%20la%20TV%20Hisense%20de%2075%22"
+                                class="bg-green-500 text-white py-1 px-2 rounded hover:bg-green-600 transition duration-300 ease-in-out"
+                                target="_blank">
+                                WhatsApp
+                            </a>
+                        </div>
                     </div>
                 </div>
 
@@ -188,10 +220,10 @@
         <script>
             var swiper = new Swiper('.swiper-container', {
                 loop: true,
-                effect: 'cube',
+                effect: 'fade',
                 centeredSlides: true,
                 slidesPerView: 'auto',
-                spaceBetween: 40,
+                spaceBetween: 50,
                 pagination: {
                     el: '.swiper-pagination',
                     clickable: true,
@@ -201,7 +233,7 @@
                     prevEl: '.swiper-button-prev',
                 },
                 autoplay: {
-                    delay: 3000,
+                    delay: 6000,
                     disableOnInteraction: false,
                 },
             });
